# munge

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.yaml  CLAUDE.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  setup.py  tox.ini
.claude/: settings.local.json
.github/workflows/: debug-release.yaml  pypi-release.yaml  release.yaml  tests.yaml  tests.yml
Ctl/: config.yaml  config.yml  requirements.txt
docs/: api.md
facsimile/: description.txt  requirements-test.txt  requirements.txt
munge/: __init__.py  base.py  cli.py  click.py  config.py  util.py
munge/codec/: __init__.py  all.py  django.py  json.py  mysql.py  yaml.py
src/munge/: __init__.py  base.py  cli.py  click.py  config.py  util.py
src/munge/codec/: __init__.py  all.py  django.py  json.py  mysql.py  toml.py  toml_toml.py  toml_tomlkit.py  yaml.py
tests/: test_cli.py  test_click.py  test_codecs.py  test_config.py  test_globals.py  test_util.py
tests/data/: dict0.json  dict0.toml  set0.yml  tab0.json  tab0.yml
tests/data/conf0/: config.toml  config.yaml
