[project]
name = "munge"
version = "1.2.0"
description = "data manipulation library and client"
readme = "README.md"
authors = [{name = "20C", email = "code@20c.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.6"

classifiers = [
  "Topic :: Software Development", 
  "License :: OSI Approved :: Apache Software License", 
  "Programming Language :: Python :: 3.6", 
  "Programming Language :: Python :: 3.7", 
  "Programming Language :: Python :: 3.8", 
  "Programming Language :: Python :: 3.9",
]

dependencies = [
    "requests>=2.6",
    "click>=8.0.1",
]

[project.urls]
Repository = "https://github.com/20c/munge/"

[project.scripts]
munge = "munge.cli:main"

[project.optional-dependencies]
yaml = ["PyYAML>=5.1"]
toml = ["toml>=0.10.2"]
tomlkit = ["tomlkit>=0.7.2"]

dev = [
    "pytest",
    "pytest-cov",
    "codecov>=2",
    "coverage>=5.5",
    "tox>=3.15",
    # linting
    "bandit>=1",
    "black>=20.8b1",
    "isort>=5.7.0",
    "flake8>=3",
    "pre-commit>=2",
    "mypy>=0.812",
    "pyupgrade>=2",
    # ctl
    "ctl>=1.0.0",
    "jinja2>=2.11.2",
    "tmpl>=0.3.0",
    "twine>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/munge"]

[tool.isort]
profile = "black"
multi_line_output = 3
