[project]
name = "munge"
version = "1.4.0"
description = "data manipulation library and client"
readme = "README.md"
authors = [{name = "20C", email = "code@20c.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"

classifiers = [
  "Topic :: Software Development",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.32.0",
    "click>=8.0.1",
    "toml>=0.10.2",
    "tomlkit>=0.11.6",
    "pyyaml>=6.0.1",
    "urllib3>=2.0.0",
    "charset-normalizer>=3.3.0",
]

[project.urls]
Repository = "https://github.com/20c/munge/"

[project.scripts]
munge = "munge.cli:main"

[project.optional-dependencies]
yaml = ["PyYAML>=6.0.1"]
toml = ["toml>=0.10.2"]
tomlkit = ["tomlkit>=0.7.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/munge"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["munge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=6",
    "pytest-cov",
    "pytest-django>=3.8",
    "pytest-filedata>=1",
    "codecov>=2",
    "coverage>=5.5",
    "tox>=4.25.0",
    "tox-gh-actions>=2.9.1",
    # linting
    "bandit>=1",
    "ruff>=0.1",
    "pre-commit>=2.13",
    "mypy>=0.950",
    # ctl
    "ctl>=1.0.0",
    "jinja2>=2.11.2",
    "tmpl>=0.3.0",
    "twine>=3.3.0",
    # docs
    "markdown",
    "markdown-include>=0.5,<1",
    "mkdocs>=1.2.3",
]
